fix: bugs and problems
fixed all class to "fixed"
fixed imports
fixed search and delete reservations system
fixed exception
migrate to java 21